changes to the cmakellist.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
-cmake_minimum_required(VERSION 3.24)
+cmake_minimum_required(VERSION 3.8)
 project(Notepad)
-
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(Notepad main.cpp)
+
+set(SOURCE_FILES  Nota.h Nota.cpp Collection.h Collection.cpp QuantityObserver.h QuantityObserver.cpp main.cpp )
+add_executable(Nota.h Nota.cpp Collection.h Collection.cpp QuantityObserver.h QuantityObserver.cpp main.cpp)
+# UNIT TESTING
+# add_subdirectory(test)
